--- a/Daily/2024-08-14.md
+++ b/Daily/2024-08-14.md
@@ -6,13 +6,18 @@ tags:
 # Расписать время с утра
 
 
-### Прочитать раздатку
+### Начало в 10:00
+Прочитать раздатку
 
-### Посмотреть видео про view 
+С 10:30 до 12:00
+Посмотреть видео про view 
 Полностью понять тему, и по практиковаться.
 
-### Проверить если какие то темы которые я пропустил, и не изучил по ходу (из Java cloud)
+С 12:00 до 12:10
+Проверить если какие то темы которые я пропустил, и не изучил по ходу (из Java cloud)
 
+
+ С 12:10 до 2:20 
 ### Продолжить изучение потоков ввода и вывода.
 
 После занятий.
